force-app/main/default/objects/Sales_Calculation__c/Sales_Calculation__c.object-meta.xml
<CustomObject>
    <description>To calculate the sales commission

Deprecated - replaced by Sales Commission object</description>
    <label>Sales Calculation - Deprecated</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Sales Calculation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Calculations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>