force-app/main/default/objects/Sales_Calculation__c/fields/Advanced_amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Advanced_amount_USD__c</fullName>
    <formula>Invoice_Finance_Deal__r.advance_amount_usd_equiv__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advanced amount USD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>