force-app/main/default/objects/Sales_Calculation__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <description>Agent from the Invoice</description>
    <label>Agent</label>
    <length>50</length>
    <type>Text</type>
</CustomField>