force-app/main/default/objects/Sales_Calculation__c/fields/Agent_Account__c.field-meta.xml
<CustomField>
    <fullName>Agent_Account__c</fullName>
    <formula>Supplier_Buyer_Map__r.Account_Agent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Account</label>
    <type>Text</type>
</CustomField>