force-app/main/default/objects/Sales_Calculation__c/fields/Agent_Empty__c.field-meta.xml
<CustomField>
    <fullName>Agent_Empty__c</fullName>
    <formula>ISBLANK( Agent__c ) =TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Empty</label>
    <type>Checkbox</type>
</CustomField>