force-app/main/default/objects/Sales_Calculation__c/fields/Amount_for_Com_USD__c.field-meta.xml
<CustomField>
    <fullName>Amount_for_Com_USD__c</fullName>
    <formula>Advanced_amount_USD__c /2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount for Com USD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>