force-app/main/default/objects/Sales_Calculation__c/fields/Amount_Paid_USD__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_USD__c</fullName>
    <formula>Invoice_Finance_Deal__r.Amount_Com_paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Paid USD</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>