force-app/main/default/objects/Sales_Calculation__c/fields/Amount_USD_Financed__c.field-meta.xml
<CustomField>
    <fullName>Amount_USD_Financed__c</fullName>
    <formula>Invoice_Finance_Deal__r.Amount_Com_Financed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount USD Financed</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>