force-app/main/default/objects/Sales_Calculation__c/fields/Applicable_commission_date__c.field-meta.xml
<CustomField>
    <fullName>Applicable_commission_date__c</fullName>
    <formula>IF( TEXT(Commission_Type__c) = &quot;Financed&quot;,  Financed_Date__c ,  Repayment_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicable Commission Date</label>
    <type>Date</type>
</CustomField>