force-app/main/default/objects/Sales_Calculation__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <formula>Invoice_Finance_Deal__r.Supplier_Buyer_Map__r.Buyer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer</label>
    <type>Text</type>
</CustomField>