force-app/main/default/objects/Sales_Calculation__c/fields/Buyer_Com_Sales__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Com_Sales__c</fullName>
    <formula>Supplier_Buyer_Map__r.Buyer_Com_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Com Sales %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>