force-app/main/default/objects/Sales_Calculation__c/fields/Buyer_Owner__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Owner__c</fullName>
    <label>Buyer Owner</label>
    <length>25</length>
    <type>Text</type>
</CustomField>