force-app/main/default/objects/Sales_Calculation__c/fields/Buyer_Sales_Owner2__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Sales_Owner2__c</fullName>
    <formula>Invoice_Finance_Deal__r.Sales_Owner_Buyer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Sales Owner</label>
    <type>Text</type>
</CustomField>