force-app/main/default/objects/Sales_Calculation__c/fields/Buyer_Sales_owner_pct__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Sales_owner_pct__c</fullName>
    <formula>Invoice_Finance_Deal__r.Supplier_Buyer_Map__r.Buyer_Sales_Zone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Buyer Sales owner (Auto)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>