force-app/main/default/objects/Sales_Calculation__c/fields/Com__c.field-meta.xml
<CustomField>
    <fullName>Com__c</fullName>
    <label>% Com Supplier</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>