force-app/main/default/objects/Sales_Calculation__c/fields/Com_Agent__c.field-meta.xml
<CustomField>
    <fullName>Com_Agent__c</fullName>
    <description>Comisssion agent from the MaP</description>
    <label>Com Agent %</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>