force-app/main/default/objects/Sales_Calculation__c/fields/Com_Auto__c.field-meta.xml
<CustomField>
    <fullName>Com_Auto__c</fullName>
    <formula>Supplier_Buyer_Map__r.Com_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Com Sales %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>