force-app/main/default/objects/Sales_Calculation__c/fields/Com_buyer__c.field-meta.xml
<CustomField>
    <fullName>Com_buyer__c</fullName>
    <label>% Com buyer</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>