force-app/main/default/objects/Sales_Calculation__c/fields/Com_Sales_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Com_Sales_Buyer__c</fullName>
    <formula>IF ( AND( Invoice_Finance_Deal__r.advance_send_to_supplier_date__c &gt; Date(2020,6,1), TEXT(Commission_Type__c) = &quot;Financed&quot; ),0,
IF ( AND( Invoice_Finance_Deal__r.advance_send_to_supplier_date__c &gt; Date(2020,6,1), TEXT(Commission_Type__c) = &quot;Paid&quot; ),FX_USD_Advanced_amount__c * Com_buyer__c   *  Buyer_Sales_owner_pct__c, FX_USD_Advanced_amount__c /2) * Com_buyer__c   *  Buyer_Sales_owner_pct__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Com Sales Buyer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>