force-app/main/default/objects/Sales_Calculation__c/fields/Com_Sales_supplier__c.field-meta.xml
<CustomField>
    <fullName>Com_Sales_supplier__c</fullName>
    <formula>IF ( AND( Invoice_Finance_Deal__r.advance_send_to_supplier_date__c &gt; Date(2020,6,1), TEXT(Commission_Type__c) = &quot;Financed&quot; ),0,
IF ( AND( Invoice_Finance_Deal__r.advance_send_to_supplier_date__c &gt; Date(2020,6,1), TEXT(Commission_Type__c) = &quot;Paid&quot; ),FX_USD_Advanced_amount__c  *    Com__c    * Supplier_Sales_Owner_pct__c, FX_USD_Advanced_amount__c /2) *    Com__c    * Supplier_Sales_Owner_pct__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Com Sales supplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>