force-app/main/default/objects/Sales_Calculation__c/fields/Commission_for__c.field-meta.xml
<CustomField>
    <fullName>Commission_for__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Field to have commission by Sales</inlineHelpText>
    <label>Commission for:</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Calculations2</relationshipName>
    <type>Lookup</type>
</CustomField>