force-app/main/default/objects/Sales_Calculation__c/fields/Commission_Sales__c.field-meta.xml
<CustomField>
    <fullName>Commission_Sales__c</fullName>
    <label>Commission Sales</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>