force-app/main/default/objects/Sales_Calculation__c/fields/Commission_Type_TXT__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type_TXT__c</fullName>
    <formula>Text ( Commission_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Type TXT</label>
    <type>Text</type>
</CustomField>