force-app/main/default/objects/Sales_Calculation__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>% Buyer Sales owner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>