force-app/main/default/objects/Sales_Calculation__c/fields/Financed_Date__c.field-meta.xml
<CustomField>
    <fullName>Financed_Date__c</fullName>
    <formula>Invoice_Finance_Deal__r.advance_send_to_supplier_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financed Date</label>
    <type>Date</type>
</CustomField>