force-app/main/default/objects/Sales_Calculation__c/fields/FX_USD_Advanced_amount__c.field-meta.xml
<CustomField>
    <fullName>FX_USD_Advanced_amount__c</fullName>
    <formula>Invoice_Finance_Deal__r.USD_Daily_FX_Advance_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX USD Advanced amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>