force-app/main/default/objects/Sales_Calculation__c/fields/Incomlend_owner__c.field-meta.xml
<CustomField>
    <fullName>Incomlend_owner__c</fullName>
    <formula>Supplier_Buyer_Map__r.Account_transferred_to_Incomlend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transferred</label>
    <type>Checkbox</type>
</CustomField>