force-app/main/default/objects/Sales_Calculation__c/fields/Invoice_Finance_Deal__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Finance_Deal__c</fullName>
    <label>Invoice Finance Deal</label>
    <referenceTo>invoice_finance_deal__c</referenceTo>
    <relationshipName>Sales_Calculations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>