force-app/main/default/objects/Sales_Calculation__c/fields/Product_type__c.field-meta.xml
<CustomField>
    <fullName>Product_type__c</fullName>
    <formula>Invoice_Finance_Deal__r.Incomlend_product_del__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product type</label>
    <type>Text</type>
</CustomField>