force-app/main/default/objects/Sales_Calculation__c/fields/Repayment_Date__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Date__c</fullName>
    <formula>Invoice_Finance_Deal__r.Actual_Repayment_Received_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repayment Date</label>
    <type>Date</type>
</CustomField>