force-app/main/default/objects/Sales_Calculation__c/fields/Sales_Owner_buyer_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Sales_Owner_buyer_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Owner buyer Lookup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Calculations1</relationshipName>
    <type>Lookup</type>
</CustomField>