force-app/main/default/objects/Sales_Calculation__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <formula>Invoice_Finance_Deal__r.Supplier_Buyer_Map__r.Supplier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier</label>
    <type>Text</type>
</CustomField>