force-app/main/default/objects/Sales_Calculation__c/fields/Supplier_Buyer_Map__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Buyer_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Buyer Map</label>
    <referenceTo>Supplier_Buyer_Map__c</referenceTo>
    <relationshipName>Sales_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>