force-app/main/default/objects/Sales_Calculation__c/fields/Supplier_owner__c.field-meta.xml
<CustomField>
    <fullName>Supplier_owner__c</fullName>
    <label>Supplier owner</label>
    <length>25</length>
    <type>Text</type>
</CustomField>