force-app/main/default/objects/Sales_Calculation__c/fields/Supplier_Sales_Owner2__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Sales_Owner2__c</fullName>
    <formula>Invoice_Finance_Deal__r.Sales_Owner_Supplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Sales Owner</label>
    <type>Text</type>
</CustomField>