force-app/main/default/objects/Sales_Calculation__c/fields/Supplier_Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Sales_Owner__c</fullName>
    <label>% Supplier Sales Owner</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>