force-app/main/default/objects/Sales_Calculation__c/fields/Supplier_Sales_Owner_pct__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Sales_Owner_pct__c</fullName>
    <formula>Invoice_Finance_Deal__r.Supplier_Buyer_Map__r.Supplier_Zone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Supplier Sales Owner (Auto)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>