force-app/main/default/objects/Sales_Calculation__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Owner Supplier Lookup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>